# fastapi-curd

./: Makefile  README.md  docker-compose.yml
api/: Dockerfile  Makefile  main.py  migrate_db.py  pyproject.toml
api/handlers/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
api/tests/: test_main.py
backend/api/: main.py
backend/api/routers/: test.py
backend/api/util/: util.py
front/: package-lock.json  package.json
front/src/: App.js
front/src/components/atoms/: CreateForm.jsx  DeleteButton.jsx  Loading.jsx  Logo.jsx  ShowModal.jsx  button.jsx  form.jsx
front/src/components/pages/: Axios.jsx  CreateTask.jsx  Swr.jsx  Task.jsx  TasksPage.jsx  TopPage.jsx
front/src/components/templates/: header.jsx
front/src/lib/api/: task.js
front/src/providers/: app.jsx
front/src/reducers/: tasks.js
front/src/routes/: index.jsx
front/src/stores/useTasks/: useDeleteTask.js  useGetTasks.js  usePostTask.js  useUpdateTask.js
front/src/urls/: index.js
front/src/utils/: api-client.js
