[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ooooose <yuuki.oose1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
taskipy = "^1.11.0"
langchain = "^0.0.220"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = { cmd = "uvicorn main:app --reload", help = "launch test server" }

